[gd_scene load_steps=18 format=3 uid="uid://bpwrbf7ouju8s"]

[ext_resource type="Script" uid="uid://xod0j3awtcp3" path="res://src/ui/menu/menu_screen.gd" id="1_j7qr3"]
[ext_resource type="Shader" uid="uid://bwq5fsfwuoq07" path="res://src/asset/shader/blur.gdshader" id="3_qrlvw"]
[ext_resource type="Texture2D" uid="uid://bp2ivieyf6hqb" path="res://asset/texture/ui/icon/return.webp" id="4_qrlvw"]
[ext_resource type="Texture2D" uid="uid://ds2igy2ll8alq" path="res://asset/texture/ui/touch_scroll.webp" id="4_xx8dj"]
[ext_resource type="PackedScene" uid="uid://c7qqliu8ypcvj" path="res://src/ui/menu/setting_container.tscn" id="6_q8po2"]
[ext_resource type="PackedScene" uid="uid://xc4y4l81r556" path="res://src/ui/menu/widget/virtual_key_button.tscn" id="9_eulag"]
[ext_resource type="Texture2D" uid="uid://c74e8o6rlcq24" path="res://asset/texture/ui/control/left.webp" id="10_304h0"]
[ext_resource type="Texture2D" uid="uid://bumo4vbdd6tql" path="res://asset/texture/ui/control/up.webp" id="10_muuh5"]
[ext_resource type="Texture2D" uid="uid://btsnotx16rf2a" path="res://asset/texture/ui/control/right.webp" id="11_odkks"]
[ext_resource type="Texture2D" uid="uid://daugocyrbmyc0" path="res://asset/texture/ui/control/confirm.webp" id="12_1qay5"]
[ext_resource type="Texture2D" uid="uid://cvcxf3et01iyg" path="res://asset/texture/ui/control/down.webp" id="14_6n0o3"]
[ext_resource type="Texture2D" uid="uid://bpf16ib3fr4ty" path="res://asset/texture/ui/control/cancel.webp" id="15_127jn"]
[ext_resource type="PackedScene" uid="uid://32a8ou0dgsob" path="res://src/ui/menu/in_game_container.tscn" id="15_5883g"]
[ext_resource type="PackedScene" uid="uid://d0q4h1qf7godu" path="res://src/ui/menu/load_container.tscn" id="16_ptv6l"]
[ext_resource type="PackedScene" uid="uid://dgs0l2ynqrnx1" path="res://src/ui/menu/new_game_container.tscn" id="17_m6cl5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s5c2f"]
shader = ExtResource("3_qrlvw")
shader_parameter/strength = 2.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i1s8b"]
content_margin_left = 2.0
content_margin_top = 1.0
content_margin_right = 2.0
content_margin_bottom = 1.0

[node name="MenuScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j7qr3")

[node name="Background" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Blur" type="ColorRect" parent="Background"]
material = SubResource("ShaderMaterial_s5c2f")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Black" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.466667)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 8.0
offset_right = -32.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="ReturnButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = SubResource("StyleBoxEmpty_i1s8b")
theme_override_styles/hover = SubResource("StyleBoxEmpty_i1s8b")
icon = ExtResource("4_qrlvw")
icon_alignment = 1

[node name="VSeparator" type="VSeparator" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "标题"
vertical_alignment = 1
autowrap_mode = 3

[node name="VSeparator2" type="VSeparator" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 1
theme_override_constants/v_separation = 1
columns = 3

[node name="LeftButton" parent="PanelContainer/VBoxContainer/HBoxContainer/GridContainer" instance=ExtResource("9_eulag")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource("10_304h0")
action = &"ui_left"

[node name="UpButton" parent="PanelContainer/VBoxContainer/HBoxContainer/GridContainer" instance=ExtResource("9_eulag")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource("10_muuh5")
action = &"ui_up"

[node name="ConfirmButton" parent="PanelContainer/VBoxContainer/HBoxContainer/GridContainer" instance=ExtResource("9_eulag")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource("12_1qay5")
action = &"ui_accept"

[node name="RightButton" parent="PanelContainer/VBoxContainer/HBoxContainer/GridContainer" instance=ExtResource("9_eulag")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource("11_odkks")
action = &"ui_right"

[node name="DownButton" parent="PanelContainer/VBoxContainer/HBoxContainer/GridContainer" instance=ExtResource("9_eulag")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource("14_6n0o3")
action = &"ui_down"

[node name="CancelButton" parent="PanelContainer/VBoxContainer/HBoxContainer/GridContainer" instance=ExtResource("9_eulag")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource("15_127jn")
action = &"ui_cancel"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="ContentContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MainContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3
follow_focus = true

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/ContentContainer/MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TouchScroll" type="NinePatchRect" parent="PanelContainer/VBoxContainer/ContentContainer/MainContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0.2)
layout_mode = 2
texture = ExtResource("4_xx8dj")
patch_margin_left = 8
patch_margin_top = 3
patch_margin_right = 8
patch_margin_bottom = 3
axis_stretch_vertical = 1

[node name="SubMenus" type="VBoxContainer" parent="PanelContainer/VBoxContainer/ContentContainer/MainContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InGameContainer" parent="PanelContainer/VBoxContainer/ContentContainer/MainContainer/HBoxContainer/SubMenus" instance=ExtResource("15_5883g")]
layout_mode = 2

[node name="SettingContainer" parent="PanelContainer/VBoxContainer/ContentContainer/MainContainer/HBoxContainer/SubMenus" instance=ExtResource("6_q8po2")]
layout_mode = 2

[node name="LoadContainer" parent="PanelContainer/VBoxContainer/ContentContainer/MainContainer/HBoxContainer/SubMenus" instance=ExtResource("16_ptv6l")]
layout_mode = 2

[node name="NewGameContainer" parent="PanelContainer/VBoxContainer/ContentContainer/MainContainer/HBoxContainer/SubMenus" instance=ExtResource("17_m6cl5")]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="PanelContainer/VBoxContainer/ContentContainer"]
layout_mode = 2

[node name="MessageLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/ContentContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/mono_font_size = 8
bbcode_enabled = true
scroll_following = true

[connection signal="focus_entered" from="PanelContainer/VBoxContainer/HBoxContainer/ReturnButton" to="." method="_on_return_button_focus_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
